fix overflow meh

--- a/app/assets/stylesheets/components/_tags-md.scss
+++ b/app/assets/stylesheets/components/_tags-md.scss
@@ -6,23 +6,22 @@
   margin: 5px 5px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: start;
   align-items: center;
   font-size: 16px;
-  max-height: 100px;
+  max-height: 79px;
   max-width: 200px;
-  
-  
   p {
     font-size: 16px;
     font-weight: bold;
   }
+  overflow: auto;
 
 }
 
 .tag-icon-md {
-  width: 27px;
-  height: 27px;
+  min-width: 27px;
+  min-height: 27px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -34,11 +33,11 @@
 .tag-name-md {
   color: #2E2C2D;
   margin: 14px 0 0 0 ;
+  max-width: 200px;
   padding: 0;
   line-height: 16px;
   font-weight: bold;
   text-align: center;
- 
 }
 
 .style {
